Footer och lite småstyling

--- a/MeasureMyPike.Web/App/MeasureMyPike/src/Main.scss
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/Main.scss
@@ -22,6 +22,9 @@ textarea {
     line-height: inherit;
 }
 
-.grid-container {
-    width: 100%;
+html,
+body {
+	margin:0;
+	padding:0;
+	height:100%;
 }
