--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/common/toolbar/toolbar.component.scss
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/common/toolbar/toolbar.component.scss
@@ -18,3 +18,22 @@ a:visited{
 .menu-padding {
     padding-right:3px;
 }
+
+.wrapper {
+	min-height:100%;
+	position:relative;
+}
+.content {
+	padding-bottom:50px; /* Height of the footer element */
+}
+.header-bar {
+    left:0;
+    width: 100%;
+}
+.footer {
+	width:100%;
+	height:50px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
