--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/Profile/userProfile-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/Profile/userProfile-view.component.html
@@ -25,16 +25,22 @@
         </form>
     </div>
 
-    <div fxFlexLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign="center center">
-        <div fxFlexLayout="column" fxFlex="155px">
-            <p style="border-bottom: 1px solid #000;">{{username}}</p>
-            <p style="font-size: 12px; margin-top: 7.250px;"><b>Användarnamn</b></p>
-        </div>
+    <div class="fakeInput" fxFlexLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign="center center">
+        <form>
+            <div fxFlexLayout="column" fxFlex="155px">
+                <md-input-container>
+                    <input [disabled]="true" mdInput value="{{username}}" />
+                    <md-hint><strong>Användarnamn</strong></md-hint>
+                </md-input-container>
+            </div>
 
-        <div fxFlexLayout="column" fxFlexOffset.xl="20px" fxFlexOffset.lg="20px" fxFlexOffset.md="20px" fxFlex="155px">
-            <p style="border-bottom: 1px solid #000;">{{memberSince | date: 'yyyy-MM-dd' }}</p>
-            <p style="font-size: 12px; margin-top: 7.250px;"><b>Medlem sedan</b></p>
-        </div>
+            <div fxFlexLayout="column" fxFlexOffset="20px" fxFlex="155px">
+                <md-input-container>
+                    <input [disabled]="true" mdInput value="{{memberSince | date: 'yyyy-MM-dd' }}" />
+                    <md-hint><strong>Medlem sedan</strong></md-hint>
+                </md-input-container>
+            </div>
+        </form>
     </div>
 
     <div fxFlexLayout="row" fxLayoutAlign="center center">
