--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user/Login/userLogin-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user/Login/userLogin-view.component.html
@@ -5,7 +5,7 @@
             <md-input-container class="wideInput">
                 <input mdInput
                        type="text"
-                       [(ngModel)]="username"
+                       [(ngModel)]="user.username"
                        name="username"
                        placeholder="Användarnamn" />
             </md-input-container>
@@ -16,7 +16,7 @@
                 <input mdInput class="form-control"
                        type="text"
                        [type]="showPassword.checked ? 'text' : 'password'"
-                       [(ngModel)]="password"
+                       [(ngModel)]="user.password"
                        name="password"
                        placeholder="Lösenord" />
             </md-input-container>
@@ -25,7 +25,7 @@
 
         <div>
             <input type="submit"
-                   [disabled]="username == null || password == null || username.length < 4 || password.length < 4"
+                   [disabled]="user.username.length < 4 || user.password.length < 4"
                    name="submit"
                    value="Logga in"
                    (click)="login($event)" />
