--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/catch/catch-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/catch/catch-view.component.html
@@ -96,7 +96,7 @@
         </form>
 
         <div fxFlexOffset="40px" fxLayout="column" fxLayoutAlign="center center">
-            <image-upload></image-upload>
+            <img fxFlex="300px" style="margin-top:13.5px; padding-top:7px;" src="http://images.mmcloud.se/api/v1/images/75d696fe-ddc3-489f-af9f-22f214a7111a/980.jpg?aaebe1e4253ee1ee811ab83ab9d15b8a">
         </div>
     </div>
 </div>
